# amp

./: Cargo.toml  build.rs
src/commands/: git.rs
src/presenters/: mod.rs
src/view/: buffer_renderer.rs  mod.rs  scrollable_region.rs
src/view/buffer/: buffer_renderer.rs
