[package]

name = "amp"
version = "0.3.4"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "A complete text editor for your terminal."
homepage = "https://amp.rs"
repository = "https://github.com/jmacdonald/amp"
documentation = "https://amp.rs/docs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["text", "editor", "terminal", "modal"]

[build-dependencies]
syntex_syntax = "0.59.1"

[dependencies]
app_dirs = "1.2.1"
scribe = { path = "../scribe" }
pad = "0.1.5"
bloodhound = "0.5.4"
luthor = "0.2.0"
git2 = "0.7.1"
fragment = "0.3.1"
regex = "1.0.0"
libc = "0.2.40"
syntect = "2.0.1"
rustbox = "0.11.0"
termion = "1.5.1"
error-chain = "0.11.0"
unicode-segmentation = "1.2.1"
clipboard = "0.4.6"
yaml-rust = "0.4.0"
smallvec = "0.6.1"

[dev-dependencies]
criterion = "0.2.3"

[features]
bench = []

[[bench]]
name = "draw_buffer"
path = "benches/view/draw_buffer.rs"
harness = false
